test/libyul/yulSyntaxTests/variable_use_before_decl_1.yul
{
	x := 2
	let x := 3
}
// ----
// DeclarationError 1133: (3-4): Variable x used before it was declared.
